# fugle-marketdata-python

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
fugle_marketdata/: __init__.py  client_factory.py  constants.py  exceptions.py
fugle_marketdata/rest/: __init__.py  base_rest.py  factory.py
fugle_marketdata/rest/futopt/: __init__.py  client.py  historical.py  intraday.py
fugle_marketdata/rest/stock/: __init__.py  client.py  corporate_actions.py  historical.py  intraday.py  snapshot.py  technical.py
fugle_marketdata/websocket/: __init__.py  client copy.py  client.py  factory.py
fugle_marketdata/websocket/futopt/: __init__.py  client.py
fugle_marketdata/websocket/stock/: __init__.py  client.py
tests/: test_base_rest.py  test_fugle_realtime.py  test_http_client.py  test_websocket_client.py
