[tool.poetry]
name = "fugle-marketdata"
version = "2.3.0"
description = "Fugle Realtime API 1.0 client library for Python"
authors = ["Fortuna Intelligence Co., Ltd. <development@fugle.tw>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fugle-dev/fugle-realtime-py#readme"
repository = "https://github.com/fugle-dev/fugle-realtime-py"
documentation = "https://developer.fugle.tw"
keywords = ["fugle", "realtime", "stock"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.2"
websocket-client = "^1.5.1"
pyee = [{ version = "^9.0.4", python = "<=3.11" }, { version = "^11.1.0", python = ">3.11" }] 

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-mock = "^3.6.1"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
